--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="preconnect" href="https://radio.estacionkusmedios.com" />
+    <link rel="preconnect" href="azuracast.com" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <style type="text/css">
