Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <img src="https://cdn-icons-png.flaticon.com/512/727/727240.png" alt="Radio Logo">
     <div class="dj-label">DJ: <span id="djName">Cargando...</span></div>
     <div class="status" id="status">Conectando a la radio...</div>
-    <audio id="radioPlayer" src="https://radio.trabullnetwork.pro/listen/estacionkusfm/radio.mp3" controls preload="none"></audio>
+    <audio id="radioPlayer" src="https://radio.kusmedios.lat/listen/estacionkusfm/radio.mp3" controls preload="none"></audio>
     <div class="controls">
       <button onclick="document.getElementById('radioPlayer').play()">▶️</button>
       <button onclick="document.getElementById('radioPlayer').pause()">⏸️</button>
